@@ -19,11 +19,11 @@
 package org.apache.iceberg;
 
 import static org.apache.iceberg.types.Types.NestedField.optional;
+import static org.apache.iceberg.types.Types.NestedField.required;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
 import java.io.IOException;
-import java.util.Collection;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
@@ -33,7 +33,6 @@ import org.apache.iceberg.inmemory.InMemoryOutputFile;
 import org.apache.iceberg.io.FileAppender;
 import org.apache.iceberg.io.InputFile;
 import org.apache.iceberg.io.OutputFile;
-import org.apache.iceberg.relocated.com.google.common.collect.ImmutableList;
 import org.apache.iceberg.relocated.com.google.common.collect.ImmutableMap;
 import org.apache.iceberg.relocated.com.google.common.collect.Iterables;
 import org.apache.iceberg.relocated.com.google.common.collect.Lists;
@@ -53,18 +52,13 @@ class TestV4ManifestReaderStats {
   private static final Map<Integer, PartitionSpec> UNPARTITIONED_SPECS =
       ImmutableMap.of(PartitionSpec.unpartitioned().specId(), PartitionSpec.unpartitioned());
   private static final List<FileFormat> MANIFEST_FORMATS =
-      ImmutableList.of(FileFormat.AVRO, FileFormat.PARQUET);
+      List.of(FileFormat.AVRO, FileFormat.PARQUET);
   private static final String TABLE_LOCATION = "s3://bucket/db/table";
 
-  private static final int GEOMETRY_FIELD_ID = 10;
-  private static final int GEOGRAPHY_FIELD_ID = 11;
-  private static final int VARIANT_FIELD_ID = 12;
   private static final int ID_FIELD_ID = 1;
   private static final int DATA_FIELD_ID = 2;
   private static final int MEASURE_FIELD_ID = 3;
 
-  // the field types cover the stats that are tracked conditionally: null counts for optional
-  // fields, NaN counts for floating point fields, and avg value size for variable-length fields
   private static final Schema TABLE_SCHEMA =
       new Schema(
           optional(ID_FIELD_ID, "id", Types.IntegerType.get()),
@@ -72,7 +66,7 @@ class TestV4ManifestReaderStats {
           optional(MEASURE_FIELD_ID, "measure", Types.DoubleType.get()));
   private static final Types.StructType CONTENT_STATS_TYPE =
       StatsUtil.statsReadSchema(
-          TABLE_SCHEMA, ImmutableList.of(ID_FIELD_ID, DATA_FIELD_ID, MEASURE_FIELD_ID));
+          TABLE_SCHEMA, List.of(ID_FIELD_ID, DATA_FIELD_ID, MEASURE_FIELD_ID));
   private static final FieldStats<Integer> ID_STATS =
       new FieldStatsStruct<>(
           CONTENT_STATS_TYPE.fieldType("id").asStructType(), 1, 100, true, 26L, 2L, 0L, null);
@@ -98,7 +92,7 @@ class TestV4ManifestReaderStats {
             () ->
                 V4ManifestReader.builder(
                         manifest, TABLE_SCHEMA, UNPARTITIONED_SPECS, TABLE_LOCATION)
-                    .projectStats((Collection<Integer>) null))
+                    .projectStats((Iterable<Integer>) null))
         .isInstanceOf(IllegalArgumentException.class)
         .hasMessage("Invalid stats projection for field IDs: null");
   }
@@ -107,8 +101,7 @@ class TestV4ManifestReaderStats {
   @FieldSource("MANIFEST_FORMATS")
   void readContentStatsForAllFieldIds(FileFormat format) throws IOException {
     TrackedFile file = fileWithStats("s3://bucket/file.parquet", contentStats());
-
-    InputFile manifest = writeManifest(format, CONTENT_STATS_TYPE, ImmutableList.of(file));
+    InputFile manifest = writeManifest(format, CONTENT_STATS_TYPE, List.of(file));
 
     try (V4ManifestReader reader =
         V4ManifestReader.builder(manifest, TABLE_SCHEMA, UNPARTITIONED_SPECS, TABLE_LOCATION)
@@ -123,209 +116,9 @@ class TestV4ManifestReaderStats {
 
   @ParameterizedTest
   @FieldSource("MANIFEST_FORMATS")
-  void readGeoStats(FileFormat format) throws IOException {
-    Schema geoSchema =
-        new Schema(
-            optional(GEOMETRY_FIELD_ID, "geom", Types.GeometryType.crs84()),
-            optional(GEOGRAPHY_FIELD_ID, "geog", Types.GeographyType.crs84()));
-    Types.StructType statsType =
-        StatsUtil.statsReadSchema(
-            geoSchema, ImmutableList.of(GEOMETRY_FIELD_ID, GEOGRAPHY_FIELD_ID));
-    Types.StructType geomStatsType = statsType.fieldType("geom").asStructType();
-    Types.StructType geogStatsType = statsType.fieldType("geog").asStructType();
-
-    // geometry and geography bound a bounding box (x, y, z, m) rather than a scalar value, and
-    // track neither tight bounds nor NaN counts
-    ContentStatsStruct stats = new ContentStatsStruct(statsType);
-    stats.setStats(
-        GEOMETRY_FIELD_ID,
-        geoStats(
-            geomStatsType,
-            boundingBox(geomStatsType, StatsUtil.LOWER_BOUND_NAME, 1.0d, 2.0d, 3.0d, 4.0d),
-            boundingBox(geomStatsType, StatsUtil.UPPER_BOUND_NAME, 5.0d, 6.0d, 7.0d, 8.0d)));
-    stats.setStats(
-        GEOGRAPHY_FIELD_ID,
-        geoStats(
-            geogStatsType,
-            boundingBox(geogStatsType, StatsUtil.LOWER_BOUND_NAME, -20.0d, -10.0d, 0.0d, 1.0d),
-            boundingBox(geogStatsType, StatsUtil.UPPER_BOUND_NAME, 20.0d, 10.0d, 30.0d, 2.0d)));
-
-    TrackedFile file = fileWithStats("s3://bucket/file.parquet", stats);
-    InputFile manifest = writeManifest(format, statsType, ImmutableList.of(file));
-
-    try (V4ManifestReader reader =
-        V4ManifestReader.builder(manifest, geoSchema, UNPARTITIONED_SPECS, TABLE_LOCATION)
-            .build()) {
-      ContentStats actual = Iterables.getOnlyElement(reader).contentStats();
-
-      FieldStats<?> geom = actual.statsFor(GEOMETRY_FIELD_ID);
-      assertThat(geom.type()).isEqualTo(geomStatsType);
-      assertThat(geom.valueCount()).isEqualTo(26L);
-      assertThat(geom.nullValueCount()).isEqualTo(2L);
-      assertThat(geom.avgValueSizeInBytes()).isEqualTo(32);
-      assertBoundingBox(geom.lowerBound(), 1.0d, 2.0d, 3.0d, 4.0d);
-      assertBoundingBox(geom.upperBound(), 5.0d, 6.0d, 7.0d, 8.0d);
-
-      FieldStats<?> geog = actual.statsFor(GEOGRAPHY_FIELD_ID);
-      assertThat(geog.type()).isEqualTo(geogStatsType);
-      assertBoundingBox(geog.lowerBound(), -20.0d, -10.0d, 0.0d, 1.0d);
-      assertBoundingBox(geog.upperBound(), 20.0d, 10.0d, 30.0d, 2.0d);
-    }
-  }
-
-  @ParameterizedTest
-  @FieldSource("MANIFEST_FORMATS")
-  void readVariantStats(FileFormat format) throws IOException {
-    Schema variantSchema = new Schema(optional(VARIANT_FIELD_ID, "var", Types.VariantType.get()));
-    Types.StructType statsType =
-        StatsUtil.statsReadSchema(variantSchema, ImmutableList.of(VARIANT_FIELD_ID));
-    Types.StructType varStatsType = statsType.fieldType("var").asStructType();
-
-    // variant bounds are variants keyed by JSON path expression that hold the bounds of fields
-    // within the variant; here the field "$['x']" ranges from 1 to 10
-    VariantMetadata metadata = Variants.metadata("$['x']");
-    Variant lowerBound = variantBound(metadata, 1);
-    Variant upperBound = variantBound(metadata, 10);
-
-    ContentStatsStruct stats = new ContentStatsStruct(statsType);
-    stats.setStats(
-        VARIANT_FIELD_ID,
-        new FieldStatsStruct<>(varStatsType, lowerBound, upperBound, false, 26L, 2L, 0L, 32));
-
-    TrackedFile file = fileWithStats("s3://bucket/file.parquet", stats);
-    InputFile manifest = writeManifest(format, statsType, ImmutableList.of(file));
-
-    try (V4ManifestReader reader =
-        V4ManifestReader.builder(manifest, variantSchema, UNPARTITIONED_SPECS, TABLE_LOCATION)
-            .build()) {
-      FieldStats<?> actual =
-          Iterables.getOnlyElement(reader).contentStats().statsFor(VARIANT_FIELD_ID);
-
-      assertThat(actual.type()).isEqualTo(varStatsType);
-      assertThat(actual.valueCount()).isEqualTo(26L);
-      assertThat(actual.nullValueCount()).isEqualTo(2L);
-      assertThat(actual.avgValueSizeInBytes()).isEqualTo(32);
-      assertThat(actual.tightBounds()).isFalse();
-      assertThat(actual.hasNanValueCount()).isFalse();
-      assertVariant(actual.lowerBound(), lowerBound);
-      assertVariant(actual.upperBound(), upperBound);
-    }
-  }
-
-  @ParameterizedTest
-  @FieldSource("MANIFEST_FORMATS")
-  void variantStatsAreCorrectWithContainerReuse(FileFormat format) throws IOException {
-    Schema variantSchema = new Schema(optional(VARIANT_FIELD_ID, "var", Types.VariantType.get()));
-    Types.StructType statsType =
-        StatsUtil.statsReadSchema(variantSchema, ImmutableList.of(VARIANT_FIELD_ID));
-    Types.StructType varStatsType = statsType.fieldType("var").asStructType();
-
-    VariantMetadata metadata = Variants.metadata("$['x']");
-
-    // each entry bounds a different range, so a reused container must not carry one entry's
-    // bounds into the next
-    Variant firstLower = variantBound(metadata, 1);
-    Variant firstUpper = variantBound(metadata, 10);
-    ContentStatsStruct first = new ContentStatsStruct(statsType);
-    first.setStats(
-        VARIANT_FIELD_ID,
-        new FieldStatsStruct<>(varStatsType, firstLower, firstUpper, false, 26L, 2L, 0L, 32));
-
-    Variant secondLower = variantBound(metadata, 100);
-    Variant secondUpper = variantBound(metadata, 1000);
-    ContentStatsStruct second = new ContentStatsStruct(statsType);
-    second.setStats(
-        VARIANT_FIELD_ID,
-        new FieldStatsStruct<>(varStatsType, secondLower, secondUpper, false, 45L, 1L, 0L, 64));
-
-    List<TrackedFile> files =
-        ImmutableList.of(
-            fileWithStats("s3://bucket/first.parquet", first),
-            fileWithStats("s3://bucket/second.parquet", second));
-
-    InputFile manifest = writeManifest(format, statsType, files);
-
-    try (V4ManifestReader reader =
-        V4ManifestReader.builder(manifest, variantSchema, UNPARTITIONED_SPECS, TABLE_LOCATION)
-            .build()) {
-      List<TrackedFile> read = Lists.newArrayList(reader);
-
-      FieldStats<?> firstStats = read.get(0).contentStats().statsFor(VARIANT_FIELD_ID);
-      assertThat(firstStats.type()).isEqualTo(varStatsType);
-      assertThat(firstStats.valueCount()).isEqualTo(26L);
-      assertThat(firstStats.nullValueCount()).isEqualTo(2L);
-      assertThat(firstStats.avgValueSizeInBytes()).isEqualTo(32);
-      assertThat(firstStats.tightBounds()).isFalse();
-      assertThat(firstStats.hasNanValueCount()).isFalse();
-      assertVariant(firstStats.lowerBound(), firstLower);
-      assertVariant(firstStats.upperBound(), firstUpper);
-
-      FieldStats<?> secondStats = read.get(1).contentStats().statsFor(VARIANT_FIELD_ID);
-      assertThat(secondStats.type()).isEqualTo(varStatsType);
-      assertThat(secondStats.valueCount()).isEqualTo(45L);
-      assertThat(secondStats.nullValueCount()).isEqualTo(1L);
-      assertThat(secondStats.avgValueSizeInBytes()).isEqualTo(64);
-      assertThat(secondStats.tightBounds()).isFalse();
-      assertThat(secondStats.hasNanValueCount()).isFalse();
-      assertVariant(secondStats.lowerBound(), secondLower);
-      assertVariant(secondStats.upperBound(), secondUpper);
-    }
-  }
-
-  @ParameterizedTest
-  @FieldSource("MANIFEST_FORMATS")
-  void geoStatsAreCorrectWithContainerReuse(FileFormat format) throws IOException {
-    Schema geoSchema = new Schema(optional(GEOMETRY_FIELD_ID, "geom", Types.GeometryType.crs84()));
-    Types.StructType statsType =
-        StatsUtil.statsReadSchema(geoSchema, ImmutableList.of(GEOMETRY_FIELD_ID));
-    Types.StructType geomStatsType = statsType.fieldType("geom").asStructType();
-
-    // each entry bounds a different box, so a reused container must not carry one entry's box
-    // into the next
-    ContentStatsStruct first = new ContentStatsStruct(statsType);
-    first.setStats(
-        GEOMETRY_FIELD_ID,
-        geoStats(
-            geomStatsType,
-            boundingBox(geomStatsType, StatsUtil.LOWER_BOUND_NAME, 1.0d, 2.0d, 3.0d, 4.0d),
-            boundingBox(geomStatsType, StatsUtil.UPPER_BOUND_NAME, 5.0d, 6.0d, 7.0d, 8.0d)));
-
-    ContentStatsStruct second = new ContentStatsStruct(statsType);
-    second.setStats(
-        GEOMETRY_FIELD_ID,
-        geoStats(
-            geomStatsType,
-            boundingBox(geomStatsType, StatsUtil.LOWER_BOUND_NAME, 11.0d, 12.0d, 13.0d, 14.0d),
-            boundingBox(geomStatsType, StatsUtil.UPPER_BOUND_NAME, 15.0d, 16.0d, 17.0d, 18.0d)));
-
-    List<TrackedFile> files =
-        ImmutableList.of(
-            fileWithStats("s3://bucket/first.parquet", first),
-            fileWithStats("s3://bucket/second.parquet", second));
-
-    InputFile manifest = writeManifest(format, statsType, files);
-
-    try (V4ManifestReader reader =
-        V4ManifestReader.builder(manifest, geoSchema, UNPARTITIONED_SPECS, TABLE_LOCATION)
-            .build()) {
-      List<TrackedFile> read = Lists.newArrayList(reader);
-
-      FieldStats<?> firstStats = read.get(0).contentStats().statsFor(GEOMETRY_FIELD_ID);
-      assertBoundingBox(firstStats.lowerBound(), 1.0d, 2.0d, 3.0d, 4.0d);
-      assertBoundingBox(firstStats.upperBound(), 5.0d, 6.0d, 7.0d, 8.0d);
-
-      FieldStats<?> secondStats = read.get(1).contentStats().statsFor(GEOMETRY_FIELD_ID);
-      assertBoundingBox(secondStats.lowerBound(), 11.0d, 12.0d, 13.0d, 14.0d);
-      assertBoundingBox(secondStats.upperBound(), 15.0d, 16.0d, 17.0d, 18.0d);
-    }
-  }
-
-  @ParameterizedTest
-  @FieldSource("MANIFEST_FORMATS")
   void rowFilterKeepsStatsForAllFieldIds(FileFormat format) throws IOException {
     TrackedFile file = fileWithStats("s3://bucket/file.parquet", contentStats());
-
-    InputFile manifest = writeManifest(format, CONTENT_STATS_TYPE, ImmutableList.of(file));
+    InputFile manifest = writeManifest(format, CONTENT_STATS_TYPE, List.of(file));
 
     // a filter narrows the stats only for scan planning, so a default read still carries the
     // stats of every field even though the filter needs one of them
@@ -344,8 +137,7 @@ class TestV4ManifestReaderStats {
   @FieldSource("MANIFEST_FORMATS")
   void selectStatsByName(FileFormat format) throws IOException {
     TrackedFile file = fileWithStats("s3://bucket/file.parquet", contentStats());
-
-    InputFile manifest = writeManifest(format, CONTENT_STATS_TYPE, ImmutableList.of(file));
+    InputFile manifest = writeManifest(format, CONTENT_STATS_TYPE, List.of(file));
 
     // stats are named after the column they describe, so a caller can select one column's stats
     try (V4ManifestReader reader =
@@ -366,8 +158,7 @@ class TestV4ManifestReaderStats {
   @FieldSource("MANIFEST_FORMATS")
   void projectStatsReadsOnlyRequestedColumns(FileFormat format) throws IOException {
     TrackedFile file = fileWithStats("s3://bucket/file.parquet", contentStats());
-
-    InputFile manifest = writeManifest(format, CONTENT_STATS_TYPE, ImmutableList.of(file));
+    InputFile manifest = writeManifest(format, CONTENT_STATS_TYPE, List.of(file));
 
     try (V4ManifestReader reader =
         V4ManifestReader.builder(manifest, TABLE_SCHEMA, UNPARTITIONED_SPECS, TABLE_LOCATION)
@@ -384,13 +175,12 @@ class TestV4ManifestReaderStats {
   @FieldSource("MANIFEST_FORMATS")
   void projectStatsWithoutFieldIdsOmitsStats(FileFormat format) throws IOException {
     TrackedFile file = fileWithStats("s3://bucket/file.parquet", contentStats());
-
-    InputFile manifest = writeManifest(format, CONTENT_STATS_TYPE, ImmutableList.of(file));
+    InputFile manifest = writeManifest(format, CONTENT_STATS_TYPE, List.of(file));
 
     // requesting no field IDs opts out of the default projection of every field
     try (V4ManifestReader reader =
         V4ManifestReader.builder(manifest, TABLE_SCHEMA, UNPARTITIONED_SPECS, TABLE_LOCATION)
-            .projectStats(ImmutableList.of())
+            .projectStats(List.of())
             .build()) {
       assertThat(Iterables.getOnlyElement(reader).contentStats()).isNull();
     }
@@ -398,10 +188,31 @@ class TestV4ManifestReaderStats {
 
   @ParameterizedTest
   @FieldSource("MANIFEST_FORMATS")
+  void projectStatsCopiesFieldIds(FileFormat format) throws IOException {
+    TrackedFile file = fileWithStats("s3://bucket/file.parquet", contentStats());
+    InputFile manifest = writeManifest(format, CONTENT_STATS_TYPE, List.of(file));
+
+    List<Integer> fieldIds = Lists.newArrayList(ID_FIELD_ID);
+    V4ManifestReader.Builder builder =
+        V4ManifestReader.builder(manifest, TABLE_SCHEMA, UNPARTITIONED_SPECS, TABLE_LOCATION)
+            .projectStats(fieldIds);
+
+    // the builder copies the field IDs, so a later change to fieldIds does not widen the projection
+    fieldIds.add(DATA_FIELD_ID);
+
+    try (V4ManifestReader reader = builder.build()) {
+      ContentStats stats = Iterables.getOnlyElement(reader).contentStats();
+      assertFieldStats(stats.statsFor(ID_FIELD_ID), ID_STATS);
+      assertThat(stats.statsFor(DATA_FIELD_ID)).isNull();
+      assertThat(stats.statsFor(MEASURE_FIELD_ID)).isNull();
+    }
+  }
+
+  @ParameterizedTest
+  @FieldSource("MANIFEST_FORMATS")
   void requestedStatsAreProjectedWhenOmittedByCaller(FileFormat format) throws IOException {
     TrackedFile file = fileWithStats("s3://bucket/file.parquet", contentStats());
-
-    InputFile manifest = writeManifest(format, CONTENT_STATS_TYPE, ImmutableList.of(file));
+    InputFile manifest = writeManifest(format, CONTENT_STATS_TYPE, List.of(file));
 
     // stats requested by field ID are read even though the projection omits them
     try (V4ManifestReader reader =
@@ -420,8 +231,7 @@ class TestV4ManifestReaderStats {
   @FieldSource("MANIFEST_FORMATS")
   void filterStatsAreProjectedWhenOmittedByCaller(FileFormat format) throws IOException {
     TrackedFile file = fileWithStats("s3://bucket/file.parquet", contentStats());
-
-    InputFile manifest = writeManifest(format, CONTENT_STATS_TYPE, ImmutableList.of(file));
+    InputFile manifest = writeManifest(format, CONTENT_STATS_TYPE, List.of(file));
 
     // the filter references data, so its stats are read even though the projection omits them
     try (V4ManifestReader reader =
@@ -438,10 +248,29 @@ class TestV4ManifestReaderStats {
 
   @ParameterizedTest
   @FieldSource("MANIFEST_FORMATS")
+  void filterStatsAreProjectedForCaseInsensitiveFilter(FileFormat format) throws IOException {
+    TrackedFile file = fileWithStats("s3://bucket/file.parquet", contentStats());
+    InputFile manifest = writeManifest(format, CONTENT_STATS_TYPE, List.of(file));
+
+    // the filter refers to data by a different case, which binds only when case is ignored
+    try (V4ManifestReader reader =
+        V4ManifestReader.builder(manifest, TABLE_SCHEMA, UNPARTITIONED_SPECS, TABLE_LOCATION)
+            .project(new Schema(TrackedFile.LOCATION))
+            .caseSensitive(false)
+            .filter(Expressions.equal("DATA", "m"))
+            .build()) {
+      ContentStats stats = Iterables.getOnlyElement(reader).contentStats();
+      assertFieldStats(stats.statsFor(DATA_FIELD_ID), DATA_STATS);
+      assertThat(stats.statsFor(ID_FIELD_ID)).isNull();
+      assertThat(stats.statsFor(MEASURE_FIELD_ID)).isNull();
+    }
+  }
+
+  @ParameterizedTest
+  @FieldSource("MANIFEST_FORMATS")
   void projectStatsAndFilterStatsAreCombined(FileFormat format) throws IOException {
     TrackedFile file = fileWithStats("s3://bucket/file.parquet", contentStats());
-
-    InputFile manifest = writeManifest(format, CONTENT_STATS_TYPE, ImmutableList.of(file));
+    InputFile manifest = writeManifest(format, CONTENT_STATS_TYPE, List.of(file));
 
     // scan planning narrows stats to the requested fields and the fields the filter needs
     try (V4ManifestReader reader =
@@ -461,8 +290,7 @@ class TestV4ManifestReaderStats {
   @FieldSource("MANIFEST_FORMATS")
   void forScanPlanningReadsOnlyFilterStats(FileFormat format) throws IOException {
     TrackedFile file = fileWithStats("s3://bucket/file.parquet", contentStats());
-
-    InputFile manifest = writeManifest(format, CONTENT_STATS_TYPE, ImmutableList.of(file));
+    InputFile manifest = writeManifest(format, CONTENT_STATS_TYPE, List.of(file));
 
     try (V4ManifestReader reader =
         V4ManifestReader.builder(manifest, TABLE_SCHEMA, UNPARTITIONED_SPECS, TABLE_LOCATION)
@@ -480,8 +308,7 @@ class TestV4ManifestReaderStats {
   @FieldSource("MANIFEST_FORMATS")
   void forScanPlanningOmitsStatsWithoutFilter(FileFormat format) throws IOException {
     TrackedFile file = fileWithStats("s3://bucket/file.parquet", contentStats());
-
-    InputFile manifest = writeManifest(format, CONTENT_STATS_TYPE, ImmutableList.of(file));
+    InputFile manifest = writeManifest(format, CONTENT_STATS_TYPE, List.of(file));
 
     // scan planning without a filter has no stats to evaluate, so none are read
     try (V4ManifestReader reader =
@@ -496,14 +323,36 @@ class TestV4ManifestReaderStats {
   @FieldSource("MANIFEST_FORMATS")
   void selectWithoutStatsOmitsStats(FileFormat format) throws IOException {
     TrackedFile file = fileWithStats("s3://bucket/file.parquet", contentStats());
-
-    InputFile manifest = writeManifest(format, CONTENT_STATS_TYPE, ImmutableList.of(file));
+    InputFile manifest = writeManifest(format, CONTENT_STATS_TYPE, List.of(file));
 
     try (V4ManifestReader reader =
         V4ManifestReader.builder(manifest, TABLE_SCHEMA, UNPARTITIONED_SPECS, TABLE_LOCATION)
             .select("location")
             .build()) {
       assertThat(Iterables.getOnlyElement(reader).contentStats()).isNull();
+    }
+  }
+
+  @ParameterizedTest
+  @FieldSource("MANIFEST_FORMATS")
+  void statsAreNullForColumnsWithoutStoredStats(FileFormat format) throws IOException {
+    // the manifest stores stats for id alone, while the reader reads stats for every column
+    Types.StructType storedStatsType =
+        StatsUtil.statsReadSchema(TABLE_SCHEMA, List.of(ID_FIELD_ID));
+    ContentStatsStruct stored = new ContentStatsStruct(storedStatsType);
+    stored.setStats(ID_FIELD_ID, ID_STATS);
+
+    TrackedFile file = fileWithStats("s3://bucket/file.parquet", stored);
+    InputFile manifest = writeManifest(format, storedStatsType, List.of(file));
+
+    try (V4ManifestReader reader =
+        V4ManifestReader.builder(manifest, TABLE_SCHEMA, UNPARTITIONED_SPECS, TABLE_LOCATION)
+            .build()) {
+      ContentStats stats = Iterables.getOnlyElement(reader).contentStats();
+      assertFieldStats(stats.statsFor(ID_FIELD_ID), ID_STATS);
+      assertThat(stats.statsFor(DATA_FIELD_ID)).isNull();
+      assertThat(stats.statsFor(MEASURE_FIELD_ID)).isNull();
+      assertThat(stats.fieldStats()).doesNotContainNull().hasSize(1);
     }
   }
 
@@ -522,13 +371,12 @@ class TestV4ManifestReaderStats {
     measureStats.setStats(MEASURE_FIELD_ID, MEASURE_STATS);
 
     List<TrackedFile> files =
-        ImmutableList.of(
+        List.of(
             fileWithStats("s3://bucket/with-id-stats.parquet", idStats),
             fileWithStats(
                 "s3://bucket/without-stats.parquet", new ContentStatsStruct(CONTENT_STATS_TYPE)),
             fileWithStats("s3://bucket/with-data-stats.parquet", dataStats),
             fileWithStats("s3://bucket/with-measure-stats.parquet", measureStats));
-
     InputFile manifest = writeManifest(format, CONTENT_STATS_TYPE, files);
 
     try (V4ManifestReader reader =
@@ -561,26 +409,311 @@ class TestV4ManifestReaderStats {
     }
   }
 
+  @ParameterizedTest
+  @FieldSource("MANIFEST_FORMATS")
+  void readStatsForNestedFields(FileFormat format) throws IOException {
+    int locationFieldId = 20;
+    int latFieldId = 21;
+    int lonFieldId = 22;
+    int tagsFieldId = 23;
+    int tagFieldId = 24;
+
+    Schema nestedSchema =
+        new Schema(
+            optional(
+                locationFieldId,
+                "location",
+                Types.StructType.of(
+                    required(latFieldId, "lat", Types.DoubleType.get()),
+                    optional(lonFieldId, "lon", Types.DoubleType.get()))),
+            optional(
+                tagsFieldId,
+                "tags",
+                Types.ListType.ofOptional(tagFieldId, Types.StringType.get())));
+    Types.StructType statsType =
+        StatsUtil.statsReadSchema(nestedSchema, List.of(latFieldId, lonFieldId));
+    FieldStats<Double> latStats =
+        new FieldStatsStruct<>(
+            statsType.fieldType("location_lat").asStructType(), 1.5, 9.5, true, 26L, 0L, 0L, null);
+    FieldStats<Double> lonStats =
+        new FieldStatsStruct<>(
+            statsType.fieldType("location_lon").asStructType(),
+            -9.5,
+            -1.5,
+            true,
+            26L,
+            2L,
+            0L,
+            null);
+
+    ContentStatsStruct stats = new ContentStatsStruct(statsType);
+    stats.setStats(latFieldId, latStats);
+    stats.setStats(lonFieldId, lonStats);
+
+    TrackedFile file = fileWithStats("s3://bucket/file.parquet", stats);
+    InputFile manifest = writeManifest(format, statsType, List.of(file));
+
+    // the reader requests stats for every field of the table, including the struct and the list
+    try (V4ManifestReader reader =
+        V4ManifestReader.builder(manifest, nestedSchema, UNPARTITIONED_SPECS, TABLE_LOCATION)
+            .build()) {
+      ContentStats actual = Iterables.getOnlyElement(reader).contentStats();
+      assertThat(actual.type()).isEqualTo(statsType);
+      assertFieldStats(actual.statsFor(latFieldId), latStats);
+      assertFieldStats(actual.statsFor(lonFieldId), lonStats);
+      assertThat(actual.statsFor(locationFieldId)).isNull();
+      assertThat(actual.statsFor(tagsFieldId)).isNull();
+    }
+  }
+
+  @ParameterizedTest
+  @FieldSource("MANIFEST_FORMATS")
+  void readVariantStats(FileFormat format) throws IOException {
+    int fieldId = 12;
+    Schema schema = new Schema(optional(fieldId, "var", Types.VariantType.get()));
+    Types.StructType statsType = StatsUtil.statsReadSchema(schema, List.of(fieldId));
+    Types.StructType varStatsType = statsType.fieldType("var").asStructType();
+
+    VariantMetadata metadata = Variants.metadata("$['x']");
+    Variant lowerBound = variantBound(metadata, 1);
+    Variant upperBound = variantBound(metadata, 10);
+
+    ContentStatsStruct stats = new ContentStatsStruct(statsType);
+    stats.setStats(
+        fieldId,
+        new FieldStatsStruct<>(varStatsType, lowerBound, upperBound, false, 26L, 2L, 0L, 32));
+
+    TrackedFile file = fileWithStats("s3://bucket/file.parquet", stats);
+    InputFile manifest = writeManifest(format, statsType, List.of(file));
+
+    try (V4ManifestReader reader =
+        V4ManifestReader.builder(manifest, schema, UNPARTITIONED_SPECS, TABLE_LOCATION).build()) {
+      FieldStats<?> actual = Iterables.getOnlyElement(reader).contentStats().statsFor(fieldId);
+
+      assertThat(actual.type()).isEqualTo(varStatsType);
+      assertThat(actual.valueCount()).isEqualTo(26L);
+      assertThat(actual.nullValueCount()).isEqualTo(2L);
+      assertThat(actual.avgValueSizeInBytes()).isEqualTo(32);
+      assertThat(actual.tightBounds()).isFalse();
+      assertThat(actual.hasNanValueCount()).isFalse();
+      assertVariant(actual.lowerBound(), lowerBound);
+      assertVariant(actual.upperBound(), upperBound);
+    }
+  }
+
+  @ParameterizedTest
+  @FieldSource("MANIFEST_FORMATS")
+  void variantStatsAreCorrectWithContainerReuse(FileFormat format) throws IOException {
+    int fieldId = 12;
+    Schema schema = new Schema(optional(fieldId, "var", Types.VariantType.get()));
+    Types.StructType statsType = StatsUtil.statsReadSchema(schema, List.of(fieldId));
+    Types.StructType varStatsType = statsType.fieldType("var").asStructType();
+
+    VariantMetadata metadata = Variants.metadata("$['x']");
+    Variant firstLower = variantBound(metadata, 1);
+    Variant firstUpper = variantBound(metadata, 10);
+    ContentStatsStruct first = new ContentStatsStruct(statsType);
+    first.setStats(
+        fieldId,
+        new FieldStatsStruct<>(varStatsType, firstLower, firstUpper, false, 26L, 2L, 0L, 32));
+
+    Variant secondLower = variantBound(metadata, 100);
+    Variant secondUpper = variantBound(metadata, 1000);
+    ContentStatsStruct second = new ContentStatsStruct(statsType);
+    second.setStats(
+        fieldId,
+        new FieldStatsStruct<>(varStatsType, secondLower, secondUpper, false, 45L, 1L, 0L, 64));
+
+    List<TrackedFile> files =
+        List.of(
+            fileWithStats("s3://bucket/first.parquet", first),
+            fileWithStats("s3://bucket/second.parquet", second));
+    InputFile manifest = writeManifest(format, statsType, files);
+
+    try (V4ManifestReader reader =
+        V4ManifestReader.builder(manifest, schema, UNPARTITIONED_SPECS, TABLE_LOCATION).build()) {
+      List<TrackedFile> read = Lists.newArrayList(reader);
+
+      FieldStats<?> firstStats = read.get(0).contentStats().statsFor(fieldId);
+      assertThat(firstStats.type()).isEqualTo(varStatsType);
+      assertThat(firstStats.valueCount()).isEqualTo(26L);
+      assertThat(firstStats.nullValueCount()).isEqualTo(2L);
+      assertThat(firstStats.avgValueSizeInBytes()).isEqualTo(32);
+      assertThat(firstStats.tightBounds()).isFalse();
+      assertThat(firstStats.hasNanValueCount()).isFalse();
+      assertVariant(firstStats.lowerBound(), firstLower);
+      assertVariant(firstStats.upperBound(), firstUpper);
+
+      FieldStats<?> secondStats = read.get(1).contentStats().statsFor(fieldId);
+      assertThat(secondStats.type()).isEqualTo(varStatsType);
+      assertThat(secondStats.valueCount()).isEqualTo(45L);
+      assertThat(secondStats.nullValueCount()).isEqualTo(1L);
+      assertThat(secondStats.avgValueSizeInBytes()).isEqualTo(64);
+      assertThat(secondStats.tightBounds()).isFalse();
+      assertThat(secondStats.hasNanValueCount()).isFalse();
+      assertVariant(secondStats.lowerBound(), secondLower);
+      assertVariant(secondStats.upperBound(), secondUpper);
+    }
+  }
+
+  @ParameterizedTest
+  @FieldSource("MANIFEST_FORMATS")
+  void readGeoStats(FileFormat format) throws IOException {
+    int geometryFieldId = 10;
+    int geographyFieldId = 11;
+    Schema geoSchema =
+        new Schema(
+            optional(geometryFieldId, "geom", Types.GeometryType.crs84()),
+            optional(geographyFieldId, "geog", Types.GeographyType.crs84()));
+    Types.StructType statsType =
+        StatsUtil.statsReadSchema(geoSchema, List.of(geometryFieldId, geographyFieldId));
+    Types.StructType geomStatsType = statsType.fieldType("geom").asStructType();
+    Types.StructType geogStatsType = statsType.fieldType("geog").asStructType();
+
+    ContentStatsStruct stats = new ContentStatsStruct(statsType);
+    stats.setStats(
+        geometryFieldId,
+        new FieldStatsStruct<>(
+            geomStatsType,
+            boundingBox(geomStatsType, StatsUtil.LOWER_BOUND_NAME, 1.0d, 2.0d, 3.0d, 4.0d),
+            boundingBox(geomStatsType, StatsUtil.UPPER_BOUND_NAME, 5.0d, 6.0d, 7.0d, 8.0d),
+            false,
+            26L,
+            2L,
+            0L,
+            32));
+    stats.setStats(
+        geographyFieldId,
+        new FieldStatsStruct<>(
+            geogStatsType,
+            boundingBox(geogStatsType, StatsUtil.LOWER_BOUND_NAME, -20.0d, -10.0d, 0.0d, 1.0d),
+            boundingBox(geogStatsType, StatsUtil.UPPER_BOUND_NAME, 20.0d, 10.0d, 30.0d, 2.0d),
+            false,
+            30L,
+            3L,
+            0L,
+            48));
+
+    TrackedFile file = fileWithStats("s3://bucket/file.parquet", stats);
+    InputFile manifest = writeManifest(format, statsType, List.of(file));
+
+    try (V4ManifestReader reader =
+        V4ManifestReader.builder(manifest, geoSchema, UNPARTITIONED_SPECS, TABLE_LOCATION)
+            .build()) {
+      ContentStats actual = Iterables.getOnlyElement(reader).contentStats();
+
+      FieldStats<?> geom = actual.statsFor(geometryFieldId);
+      assertThat(geom.type()).isEqualTo(geomStatsType);
+      assertThat(geom.valueCount()).isEqualTo(26L);
+      assertThat(geom.nullValueCount()).isEqualTo(2L);
+      assertThat(geom.hasNanValueCount()).isFalse();
+      assertThat(geom.tightBounds()).isFalse();
+      assertThat(geom.avgValueSizeInBytes()).isEqualTo(32);
+      assertBoundingBox(geom.lowerBound(), 1.0d, 2.0d, 3.0d, 4.0d);
+      assertBoundingBox(geom.upperBound(), 5.0d, 6.0d, 7.0d, 8.0d);
+
+      FieldStats<?> geog = actual.statsFor(geographyFieldId);
+      assertThat(geog.type()).isEqualTo(geogStatsType);
+      assertThat(geog.valueCount()).isEqualTo(30L);
+      assertThat(geog.nullValueCount()).isEqualTo(3L);
+      assertThat(geog.hasNanValueCount()).isFalse();
+      assertThat(geog.tightBounds()).isFalse();
+      assertThat(geog.avgValueSizeInBytes()).isEqualTo(48);
+      assertBoundingBox(geog.lowerBound(), -20.0d, -10.0d, 0.0d, 1.0d);
+      assertBoundingBox(geog.upperBound(), 20.0d, 10.0d, 30.0d, 2.0d);
+    }
+  }
+
+  @ParameterizedTest
+  @FieldSource("MANIFEST_FORMATS")
+  void geoStatsAreCorrectWithContainerReuse(FileFormat format) throws IOException {
+    int geometryFieldId = 10;
+    Schema geoSchema = new Schema(optional(geometryFieldId, "geom", Types.GeometryType.crs84()));
+    Types.StructType statsType = StatsUtil.statsReadSchema(geoSchema, List.of(geometryFieldId));
+    Types.StructType geomStatsType = statsType.fieldType("geom").asStructType();
+
+    ContentStatsStruct first = new ContentStatsStruct(statsType);
+    first.setStats(
+        geometryFieldId,
+        new FieldStatsStruct<>(
+            geomStatsType,
+            boundingBox(geomStatsType, StatsUtil.LOWER_BOUND_NAME, 1.0d, 2.0d, 3.0d, 4.0d),
+            boundingBox(geomStatsType, StatsUtil.UPPER_BOUND_NAME, 5.0d, 6.0d, 7.0d, 8.0d),
+            false,
+            26L,
+            2L,
+            0L,
+            32));
+
+    ContentStatsStruct second = new ContentStatsStruct(statsType);
+    second.setStats(
+        geometryFieldId,
+        new FieldStatsStruct<>(
+            geomStatsType,
+            boundingBox(geomStatsType, StatsUtil.LOWER_BOUND_NAME, 11.0d, 12.0d, 13.0d, 14.0d),
+            boundingBox(geomStatsType, StatsUtil.UPPER_BOUND_NAME, 15.0d, 16.0d, 17.0d, 18.0d),
+            false,
+            45L,
+            1L,
+            0L,
+            64));
+
+    List<TrackedFile> files =
+        List.of(
+            fileWithStats("s3://bucket/first.parquet", first),
+            fileWithStats("s3://bucket/second.parquet", second));
+    InputFile manifest = writeManifest(format, statsType, files);
+
+    try (V4ManifestReader reader =
+        V4ManifestReader.builder(manifest, geoSchema, UNPARTITIONED_SPECS, TABLE_LOCATION)
+            .build()) {
+      List<TrackedFile> read = Lists.newArrayList(reader);
+
+      FieldStats<?> firstStats = read.get(0).contentStats().statsFor(geometryFieldId);
+      assertThat(firstStats.type()).isEqualTo(geomStatsType);
+      assertThat(firstStats.valueCount()).isEqualTo(26L);
+      assertThat(firstStats.nullValueCount()).isEqualTo(2L);
+      assertThat(firstStats.avgValueSizeInBytes()).isEqualTo(32);
+      assertThat(firstStats.tightBounds()).isFalse();
+      assertThat(firstStats.hasNanValueCount()).isFalse();
+      assertBoundingBox(firstStats.lowerBound(), 1.0d, 2.0d, 3.0d, 4.0d);
+      assertBoundingBox(firstStats.upperBound(), 5.0d, 6.0d, 7.0d, 8.0d);
+
+      FieldStats<?> secondStats = read.get(1).contentStats().statsFor(geometryFieldId);
+      assertThat(secondStats.type()).isEqualTo(geomStatsType);
+      assertThat(secondStats.valueCount()).isEqualTo(45L);
+      assertThat(secondStats.nullValueCount()).isEqualTo(1L);
+      assertThat(secondStats.avgValueSizeInBytes()).isEqualTo(64);
+      assertThat(secondStats.tightBounds()).isFalse();
+      assertThat(secondStats.hasNanValueCount()).isFalse();
+      assertBoundingBox(secondStats.lowerBound(), 11.0d, 12.0d, 13.0d, 14.0d);
+      assertBoundingBox(secondStats.upperBound(), 15.0d, 16.0d, 17.0d, 18.0d);
+    }
+  }
+
   private static void assertFieldStats(FieldStats<?> actual, FieldStats<?> expected) {
     assertThat(actual).isNotNull();
     assertThat(actual.fieldId()).isEqualTo(expected.fieldId());
     assertThat(actual.type()).isEqualTo(expected.type());
+    assertThat(actual.valueCount()).isEqualTo(expected.valueCount());
     assertThat(actual.lowerBound()).isEqualTo(expected.lowerBound());
     assertThat(actual.upperBound()).isEqualTo(expected.upperBound());
     assertThat(actual.tightBounds()).isEqualTo(expected.tightBounds());
     assertThat(actual.avgValueSizeInBytes()).isEqualTo(expected.avgValueSizeInBytes());
 
-    // the count accessors unbox a nullable Long, so they throw for stats the field does not track
     Types.StructType statsType = expected.type();
-    assertThat(statsType.field("value_count")).isNotNull();
-    assertThat(actual.valueCount()).isEqualTo(expected.valueCount());
-
     if (statsType.field("null_value_count") != null) {
+      assertThat(actual.hasNullValueCount()).isTrue();
       assertThat(actual.nullValueCount()).isEqualTo(expected.nullValueCount());
+    } else {
+      assertThat(actual.hasNullValueCount()).isFalse();
     }
 
     if (statsType.field("nan_value_count") != null) {
+      assertThat(actual.hasNanValueCount()).isTrue();
       assertThat(actual.nanValueCount()).isEqualTo(expected.nanValueCount());
+    } else {
+      assertThat(actual.hasNanValueCount()).isFalse();
     }
   }
 
@@ -607,11 +740,6 @@ class TestV4ManifestReaderStats {
     Variant variant = (Variant) actual;
     VariantTestUtil.assertEqual(expected.metadata(), variant.metadata());
     VariantTestUtil.assertEqual(expected.value(), variant.value());
-  }
-
-  private static FieldStats<StructLike> geoStats(
-      Types.StructType statsType, StructLike lowerBound, StructLike upperBound) {
-    return new FieldStatsStruct<>(statsType, lowerBound, upperBound, false, 26L, 2L, 0L, 32);
   }
 
   private static StructLike boundingBox(
